# clickGPT

./: Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
app/: main.py
app/src/auth/: authentication.py  config.py  schemas.py
app/src/posts/: get_answer.py  get_text_from_audio.py  schemas.py
