[tool.poetry]
name = "clickgpt"
version = "0.1.0"
description = ""
authors = ["Lukas Scholz <lscholz14@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
revchatgpt = "^3.1.8.2"
pydantic = "^1.10.5"
uvicorn = "^0.20.0"
fastapi = "^0.93.0"
speechrecognition = "^3.9.0"
python-multipart = "^0.0.6"
passlib = "^1.7.4"
python-jose = "^3.3.0"
bcrypt = "^4.0.1"
pre-commit = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
